--- a/virtuel-keyboard/.eslintignore
+++ b/virtuel-keyboard/.eslintignore
@@ -1,3 +1,3 @@
-/virtuel-keyboard/node_modules
-/virtuel-keyboard/dist
-/virtuel-keyboard/webpack.config.js
+/node_modules
+/dist
+webpack.config.js
